[project]
name = "prsw"
dynamic = ["version"]
description = "Python RIPE Stat Wrapper"
keywords = ["RIPE", "RIPEStat"]
license = "BSD-2-Clause"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "pydocstyle>=6.3.0",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.8",
    "sphinx>=7.1.2",
    "sphinx-rtd-theme>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/jvoss/prsw"
Documentation = "https://prsw.readthedocs.io"
Repository = "https://github.com/jvoss/prsw"
Issues = "https://github.com/jvoss/prsw/issues"

[tool.uv]
package = true

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = [
    "B",        # flake8-bugbear
    "E",        # pycodestyle errors
    "F",        # pyflakes
    "I",        # isort
    "W",        # pycodestyle warnings
    "C4",       # flake8-comprehensions
    "UP",       # pyupgrade
    "ARG001",   # unused arguments in functions
    "T201",     # print statements are not allowed
]
# Allow autofix for enabled rules (with `--fix`) is provided.
fixable = ["B", "E", "F", "I", "W", "C4"]

[tool.setuptools_scm]
tag_regex = "^v(?P<version>.*)$"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[build-system]
requires = ["setuptools>=61", "setuptools-scm"]
build-backend = "setuptools.build_meta"
